--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ h1 {
   font-family: "Encode Sans Expanded", Helvetica, sans-serif;
 }
 img {
-  height: 2em;
+  height: 2.5 em;
   float: left;
+  margin: 1 em;
 }
