--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html {
 h1 {
   color: dimgray;
   font-family: "Encode Sans Expanded", Helvetica, sans-serif;
-  padding-left: 1em;
+  margin-left: 1em;
 }
 img {
   height: 2.5em;
