--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,30 @@ h1 {
   color: dimgray;
   font-family: "Encode Sans Expanded", Helvetica, sans-serif;
   margin-left: 1em;
+  grid-column: 2/4;
+  grid-row: 1/2;
 }
 img {
   height: 2.5em;
-  float: left;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 nav {
-  clear: left;
+  grid-column: 1/2;
+  grid-row: 2/3;
 }
 ul, li {
   list-style: none;
 }
 main {
-  clear: left;
+  grid-column: 2/5;
+  grid-row: 2/6;
+}
+.grid-container {
+  display: grid;
+  grid-gap: 0.5em;
+  grid-template-columns: auto auto auto auto auto auto;
+  Grid-template-rows: auto auto auto auto auto auto auto auto;
 }
 .nav-link {
   color: dimgray;
