--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,9 @@ ul, li {
 main {
   grid-column: 2/5;
   grid-row: 2/6;
+  background-color: rosybrown;
+  font-family: "Encode Sans Expanded", Helvrtica, sans-serif;
+  color: whitesmoke;
 }
 .grid-container {
   display: grid;
@@ -42,9 +45,4 @@ main {
   background-color: orangered;
   font-family: "Encode Sans Expanded", Helvetica, sans-serif;
   text-decoration: none;
-}
-.main-box {
-  width: 6em;
-  height: 10em;
-  background-color: rosybrown;
 }
