--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ h1 {
   font-family: "Encode Sans Expanded", Helvetica, sans-serif;
   grid-column: 2/4;
   grid-row: 1/2;
+  clear: left;
 }
 .about-me-grid {
   display: grid;
@@ -16,6 +17,7 @@ h1 {
   height: 3em;
   grid-column: 1/2;
   grid-row: 1/2;
+  float: left;
 }
 .main-content {
   grid-column: 1/4;
